--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Web Studio</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+			integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -22,7 +28,7 @@
 
 					<ul class="menu-nav list">
 						<li class="item"><a href="./index.html" class="menu-link link">Studio</a></li>
-						<li class="item"><a href="./portfolio.html" class="menu-link link">Portfolio</a></li>
+						<li class="item"><a href="./portfolio.html" class="menu-link link current">Portfolio</a></li>
 						<li class="item"><a href="" class="menu-link link">Contacts</a></li>
 					</ul>
 				</nav>
@@ -51,73 +57,145 @@
 
 					<ul class="img-list list">
 						<li class="item">
-							<img src="./images/img-portfolio-1.jpg" alt="Banking app"  />
-							<div class="img-descr">
-								<h2 class="subheader-item">Banking App Interface Concept</h2>
-								<p class="subheader-descr">App</p>
-							</div>
+							<a href="" class="img-link link">
+								<div class="img-list-wrapper">
+									<img src="./images/img-portfolio-1.jpg" alt="Banking app" />
+									<p class="item-overlay"
+										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+										Fruit Ecommerce App · Cloud Storage App</p
+									>
+								</div>
+								<div class="img-descr">
+									<h2 class="subheader-item">Banking App Interface Concept</h2>
+									<p class="subheader-descr">App</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./images/img-portfolio-2.jpg" alt="Cash payment"  />
-							<div class="img-descr">
-								<h2 class="subheader-item">Cashless Payment</h2>
-								<p class="subheader-descr">Marketing</p>
-							</div>
+							<a href="" class="img-link link">
+								<div class="img-list-wrapper">
+									<img src="./images/img-portfolio-2.jpg" alt="Cash payment" />
+									<p class="item-overlay"
+										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+										Fruit Ecommerce App · Cloud Storage App</p
+									>
+								</div>
+								<div class="img-descr">
+									<h2 class="subheader-item">Cashless Payment</h2>
+									<p class="subheader-descr">Marketing</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./images/img-portfolio-3.jpg" alt="Meditation app"  />
-							<div class="img-descr">
-								<h2 class="subheader-item">Meditaion App</h2>
-								<p class="subheader-descr">App</p>
-							</div>
+							<a href="" class="img-link link">
+								<div class="img-list-wrapper">
+									<img src="./images/img-portfolio-3.jpg" alt="Meditation app" />
+									<p class="item-overlay"
+										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+										Fruit Ecommerce App · Cloud Storage App</p
+									>
+								</div>
+								<div class="img-descr">
+									<h2 class="subheader-item">Meditaion App</h2>
+									<p class="subheader-descr">App</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./images/img-portfolio-4.jpg" alt="Taxi car" />
-							<div class="img-descr">
-								<h2 class="subheader-item">Taxi Service</h2>
-								<p class="subheader-descr">Marketing</p>
-							</div>
+							<a href="" class="img-link link">
+								<div class="img-list-wrapper">
+									<img src="./images/img-portfolio-4.jpg" alt="Taxi car" />
+									<p class="item-overlay"
+										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+										Fruit Ecommerce App · Cloud Storage App</p
+									>
+								</div>
+								<div class="img-descr">
+									<h2 class="subheader-item">Taxi Service</h2>
+									<p class="subheader-descr">Marketing</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./images/img-portfolio-5.jpg" alt="screen phone"  />
-							<div class="img-descr">
-								<h2 class="subheader-item">Screen Illustrations</h2>
-								<p class="subheader-descr">Design</p>
-							</div>
+							<a href="" class="img-link link">
+								<div class="img-list-wrapper">
+									<img src="./images/img-portfolio-5.jpg" alt="screen phone" />
+									<p class="item-overlay"
+										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+										Fruit Ecommerce App · Cloud Storage App</p
+									>
+								</div>
+								<div class="img-descr">
+									<h2 class="subheader-item">Screen Illustrations</h2>
+									<p class="subheader-descr">Design</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./images/img-portfolio-6.jpg" alt="pretty girl with phone"  />
-							<div class="img-descr">
-								<h2 class="subheader-item">Online Courses</h2>
-								<p class="subheader-descr">Marketing</p>
-							</div>
+							<a href="" class="img-link link">
+								<div class="img-list-wrapper">
+									<img src="./images/img-portfolio-6.jpg" alt="pretty girl with phone" />
+									<p class="item-overlay"
+										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+										Fruit Ecommerce App · Cloud Storage App</p
+									>
+								</div>
+								<div class="img-descr">
+									<h2 class="subheader-item">Online Courses</h2>
+									<p class="subheader-descr">Marketing</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./images/img-portfolio-7.jpg" alt="cmm"  />
-							<div class="img-descr">
-								<h2 class="subheader-item">Instagram Stories Concept</h2>
-								<p class="subheader-descr">Design</p>
-							</div>
+							<a href="" class="img-link link">
+								<div class="img-list-wrapper">
+									<img src="./images/img-portfolio-7.jpg" alt="cmm" />
+									<p class="item-overlay"
+										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+										Fruit Ecommerce App · Cloud Storage App</p
+									>
+								</div>
+								<div class="img-descr">
+									<h2 class="subheader-item">Instagram Stories Concept</h2>
+									<p class="subheader-descr">Design</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./images/img-portfolio-8.jpg" alt="organic food"  />
-							<div class="img-descr">
-								<h2 class="subheader-item">Organic Food</h2>
-								<p class="subheader-descr">Web Site</p>
-							</div>
+							<a href="" class="img-link link">
+								<div class="img-list-wrapper">
+									<img src="./images/img-portfolio-8.jpg" alt="organic food" />
+									<p class="item-overlay"
+										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+										Fruit Ecommerce App · Cloud Storage App</p
+									>
+								</div>
+								<div class="img-descr">
+									<h2 class="subheader-item">Organic Food</h2>
+									<p class="subheader-descr">Web Site</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./images/img-portfolio-9.jpg" alt="coffee art"  />
-							<div class="img-descr">
-								<h2 class="subheader-item">Fresh Coffee</h2>
-								<p class="subheader-descr">Web Site</p>
-							</div>
+							<a href="" class="img-link link">
+								<div class="img-list-wrapper">
+									<img src="./images/img-portfolio-9.jpg" alt="coffee art" />
+									<p class="item-overlay"
+										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+										Fruit Ecommerce App · Cloud Storage App</p
+									>
+								</div>								
+								<div class="img-descr">
+									<h2 class="subheader-item">Fresh Coffee</h2>
+									<p class="subheader-descr">Web Site</p>
+								</div>
+							</a>
 						</li>
 					</ul>
 				</div>
 			</section>
 		</main>
-
+        <!-- Footer -->
 		<footer class="footer">
 			<div class="container footer-container">
 				<div class="footer-main">
@@ -162,5 +240,6 @@
 				</div>
 			</div>
 		</footer>
+		<!-- /Footer -->
 	</body>
 </html>
